--- a/style.css
+++ b/style.css
@@ -1,6 +1,15 @@
 body {
+    font-family: 'Montserrat', sans-serif;
+    font-family: 'Oswald', sans-serif;
+    font-family: 'Roboto', sans-serif;
 
     margin: 0;
+    padding: 30px;
+    color: #575757;
+}
+
+h1 {
+    font-size: 50px;
 }
 
 .half-width {
@@ -26,3 +35,25 @@ body {
 }
 
 .top-banner {}
+
+.orange-color {
+    color: #0da6fa;
+}
+
+.order-button {
+    text-decoration: none;
+    padding: 15px 40px;
+
+    background-image: linear-gradient(#0da6fa, #14b9fc);
+    color: white;
+    border-radius: 20px;
+
+
+}
+
+.second-section {
+
+
+    background-image: url(shape/shape-one.jpg);
+    background-repeat: no-repeat;
+}
