--- a/style.css
+++ b/style.css
@@ -16,6 +16,7 @@ h1 {
 
 
     width: 50%;
+    padding: 75px;
 }
 
 .half-width img {
@@ -27,7 +28,7 @@ h1 {
 .flex-container {
 
     display: flex;
-    margin-bottom: 150px;
+
 }
 
 .test {
@@ -56,4 +57,57 @@ h1 {
 
     background-image: url(shape/shape-one.jpg);
     background-repeat: no-repeat;
+}
+
+.my-recipes {
+
+    text-align: center;
+    padding-left: 450px;
+    padding-right: 450px;
+    padding-bottom: 160px;
+}
+
+p {
+
+    font-family: 'Manrope', sans-serif;
+
+    line-height: 28px;
+}
+
+.box {
+
+
+    box-shadow: 10px 10px 40px gray;
+
+    border-radius: 10px;
+    margin-left: 5%;
+    margin-right: 5%;
+    margin-bottom: 5%;
+    margin-top: 5%;
+
+    display: block;
+    padding-left: 40px;
+    padding-right: 40px;
+
+
+
+}
+
+.box img {
+
+    width: 100%;
+}
+
+.not-deploy {
+    width: 50%;
+    padding: 20px;
+    padding-left: px;
+}
+
+
+.food-container {
+
+    display: flex;
+
+
 }
